// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/card/cardfooter > should render 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  />
</div>
`;

exports[`lib/card/cardfooter > should render with a comment icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="comment"
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Comment: comment"
        className="panel-card-v2-badge active root-111"
        data-icon-name="Comment"
        role="img"
        tabIndex={0}
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a comment icon 2`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="comment"
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Comment: comment"
        className="panel-card-v2-badge active root-111"
        data-icon-name="Comment"
        role="img"
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a connection icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="joechung@microsoft.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Connection name: joechung@microsoft.com"
        className="panel-card-v2-badge active root-114"
        data-icon-name="Link"
        role="img"
        tabIndex={0}
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a connection icon 2`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="joechung@microsoft.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Connection name: joechung@microsoft.com"
        className="panel-card-v2-badge active root-114"
        data-icon-name="Link"
        role="img"
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a lock icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="This operation has secure inputs or outputs enabled."
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Secure inputs or outputs enabled.: This operation has secure inputs or outputs enabled."
        className="panel-card-v2-badge active root-114"
        data-icon-name="Lock"
        role="img"
        tabIndex={0}
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a lock icon 2`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="This operation has secure inputs or outputs enabled."
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Secure inputs or outputs enabled.: This operation has secure inputs or outputs enabled."
        className="panel-card-v2-badge active root-114"
        data-icon-name="Lock"
        role="img"
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a testing icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="This Action has testing configured."
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Testing: This Action has testing configured."
        className="panel-card-v2-badge active root-117"
        data-icon-name="TestBeaker"
        role="img"
        tabIndex={0}
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with a testing icon 2`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <div
      aria-label="This Action has testing configured."
      onBlur={[Function]}
      onFocus={[Function]}
      onPointerEnter={[Function]}
      onPointerLeave={[Function]}
    >
      <i
        aria-label="Testing: This Action has testing configured."
        className="panel-card-v2-badge active root-117"
        data-icon-name="TestBeaker"
        role="img"
      >
        
      </i>
    </div>
  </div>
</div>
`;

exports[`lib/card/cardfooter > should render with an inactive connection icon 1`] = `
<div
  className="msla-card-v2-footer"
>
  <div
    className="msla-badges"
  >
    <i
      aria-label="Connection required"
      className="panel-card-v2-badge inactive root-114"
      data-icon-name="Link"
      role="img"
      tabIndex={0}
    >
      
    </i>
  </div>
</div>
`;
